--- a/QuizBoardProject/QuizBoard/src/main/AndroidManifest.xml
+++ b/QuizBoardProject/QuizBoard/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.quizboard"
+    package="ca.dal.cs.quizboard"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".QuizScreen"
+            android:name="ca.dal.cs.quizboard.quizboard"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
