--- a/QuizBoardProject/QuizBoard/src/main/AndroidManifest.xml
+++ b/QuizBoardProject/QuizBoard/src/main/AndroidManifest.xml
@@ -14,12 +14,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ca.dal.cs.csci4126.quizboard.MainActivity"
+            android:name="ca.dal.cs.csci4126.quizboard.Splash"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+                android:name="ca.dal.cs.csci4126.quizboard.MainActivity"
+                android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="ca.dal.cs.csci4126.quizboard.STARTINGPOINT" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
