--- a/QuizBoardProject/QuizBoard/src/main/AndroidManifest.xml
+++ b/QuizBoardProject/QuizBoard/src/main/AndroidManifest.xml
@@ -30,6 +30,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity
+                android:name="ca.dal.cs.csci4126.quizboard.Prefs"
+                android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="ca.dal.cs.csci4126.quizboard.PREFS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
