--- a/QuizBoardProject/QuizBoard/build.gradle
+++ b/QuizBoardProject/QuizBoard/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:13.0.+'
+   // compile 'com.android.support:support-v4:13.0.+'
     compile files('libs/commons-httpclient-3.1.jar')
     compile files('libs/httpclient-4.2.2.jar')
     compile files('libs/httpcore-4.2.2.jar')
