Made my own login pages instead

--- a/QuizBoardProject/QuizBoard/src/main/AndroidManifest.xml
+++ b/QuizBoardProject/QuizBoard/src/main/AndroidManifest.xml
@@ -40,24 +40,20 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="ca.dal.cs.csci4126.quizboard.SubQuestionTypes"
-            android:label="@string/app_name" >
+
+        <activity android:name=".LoginActivity"
+                  android:label="Login to your Account">
             <intent-filter>
-                <action android:name="ca.dal.cs.csci4126.quizboard.SUBQUEST" />
+                <action android:name="ca.dal.cs.csci4126.quizboard.LOGIN" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="ca.dal.cs.csci4126.quizboard.LoginActivity"
-            android:label="@string/title_activity_login">
-            <intent-filter>
-                <action android:name="ca.dal.cs.csci4126.quizboard.LOGIN" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-           <!-- android:windowSoftInputMode="adjustResize|stateVisible" >-->
-        </activity>
+
+        <!--  Entry for RegisterActivity.class -->
+        <activity android:name=".RegisterActivity"
+                  android:label="Register New Account"></activity>
+
     </application>
 
 </manifest>
